@@ -342,18 +342,16 @@ href="http://www.cups.org/articles.php?L236">Ghostscript</a>.
       </p>
     </td>
     <td>
-      Fedora Core
-    </td>
-    <td>
-      3
-    </td>
-    <td><strong>Download 
-	<a href="http://lilypond.org/download/binaries/Fedora-3/lilypond-2.5.25-1.i386.rpm">lilypond</a>,
-	<a
-	   href="http://lilypond.org/download/binaries/Fedora-3/lilypond-documentation-2.5.25-1.i386.rpm">documentation</a>,
-	<a
-	   href="http://lilypond.org/download/binaries/Fedora-3/ghostscript-8.15rc3-0.i386.rpm">ghostscript</a>
-	   </strong>
+      Fedora Core </td> <td> 3 </td> <td><strong>Download <a
+    href="http://lilypond.org/download/binaries/Fedora-3/lilypond-2.5.25-1.i386.rpm">lilypond</a>,
+    <a
+    href="http://lilypond.org/download/binaries/Fedora-3/lilypond-documentation-2.5.25-1.i386.rpm">documentation</a>,
+    <a
+    href="http://lilypond.org/download/binaries/Fedora-3/ghostscript-8.15rc3-0.i386.rpm">ghostscript</a>,
+
+        <a
+    href="http://lilypond.org/download/binaries/Fedora-3/ghostscript-libs-7.07-41.i386.rpm">compatibility libraries</a>
+	   	   </strong>
       (<a href="#gs815">NOTE</a>)
     </td>
     <td>2.5.25</td>
